[gd_scene load_steps=9 format=3 uid="uid://kn5dlvvlj10h"]

[ext_resource type="Script" path="res://scenes/gameplay/gameplay.gd" id="1_gfupu"]
[ext_resource type="PackedScene" uid="uid://dab600stg4bxl" path="res://scenes/gameplay/notes/notefield.tscn" id="2_6wcp1"]
[ext_resource type="PackedScene" uid="uid://dxm24padis8xt" path="res://scenes/backgrounds/mainStage.tscn" id="2_k2qad"]
[ext_resource type="PackedScene" uid="uid://bc1se7ekgu1ux" path="res://scenes/gameplay/hud/combo_group.tscn" id="4_j8sim"]
[ext_resource type="Script" path="res://scenes/gameplay/note_cluster.gd" id="5_8cnuc"]
[ext_resource type="PackedScene" uid="uid://bcn0ldilqlnur" path="res://scenes/gameplay/event_machine.tscn" id="7_16sth"]
[ext_resource type="PackedScene" uid="uid://yruwyaxp0fdl" path="res://scenes/gameplay/hud/raven.tscn" id="12_hchqv"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_th0ye"]

[node name="gameplay" type="Node2D" node_paths=PackedStringArray("combo_group", "note_fields")]
script = ExtResource("1_gfupu")
combo_group = NodePath("ui_layer/combo_group")
note_fields = [NodePath("ui_layer/player1_notefield"), NodePath("ui_layer/player2_notefield")]

[node name="main_stage" parent="." instance=ExtResource("2_k2qad")]

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="hud" parent="ui_layer" instance=ExtResource("12_hchqv")]

[node name="combo_group" parent="ui_layer" instance=ExtResource("4_j8sim")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 540.0
offset_top = 200.0
offset_right = 740.0
offset_bottom = 400.0
grow_horizontal = 1
grow_vertical = 1

[node name="player1_notefield" parent="ui_layer" instance=ExtResource("2_6wcp1")]
offset_left = 100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="player2_notefield" parent="ui_layer" instance=ExtResource("2_6wcp1")]
offset_left = 800.0
offset_top = 100.0
offset_right = 800.0
offset_bottom = 100.0

[node name="note_cluster" type="Node2D" parent="ui_layer"]
position = Vector2(96, 96)
script = ExtResource("5_8cnuc")

[node name="countdown_timer" type="Timer" parent="."]

[node name="event_machine" parent="." instance=ExtResource("7_16sth")]

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_th0ye")
bus = &"BGM"
